GEOWAVE-1812: updated major dependencies to current versions